[package]
name = "tracert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = { version = "0.4.7", features = ["all"] }
dns-lookup = "1.0.8"
byteorder = "1.4.3"
clap = { version = "4.0", features = ["derive"] }
uapi = "0.2.1"
